--- a/lottó.html
+++ b/lottó.html
@@ -7,6 +7,33 @@
     <title>Lottó</title>
 </head>
 <body>
-    
+    <div cslass="container"> </div>
+        <div class= "menu"></div>
+        <ing src ="" alt="">
+        <ul>
+            <li href="">M1</a></li>
+            <lih href=""></lih>
+            <lih href=""></lih>
+            <lih href=""></lih>
+            <lih href=""></lih>
+            <lih href=""></lih>
+            <lih href=""></lih>
+        </ul>
+    </div>
+    <div class="tartalom">
+        <h1> Előző heti nyerő számok</h1>
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <h1>Korábbi nyerőszámok</h1>
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+        <img src="" alt="golyó">
+    </div>
+       </ul>
 </body>
 </html>
