--- a/lottó.html
+++ b/lottó.html
@@ -12,12 +12,12 @@
         <ing src ="" alt="">
         <ul>
             <li href="">M1</a></li>
-            <li href="mezo2"></li>
-            <li href="mezo3"></li>
-            <li href="mezo4"></li>
-            <li href="mezo5"></li>
-            <li href="mezo6"></li>
-            <li href="mezo7"></li>
+            <li href="">M1</a></li>
+            <li href="">M1</a></li>
+            <li href="">M1</a></li>
+            <li href="">M1</a></li>
+            <li href="">M1</a></li>
+            <li href="">M1</a></li>
         </ul>
     </div>
     <div class="tartalom">
