--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <elemnet class="tartalom">
         <h1>Korábbi sorsolások</h1>
         <h1>Előző heti nyerőszámok</h1>
-        <img src="piros-golyo.png" alt="golyo">
+        <img src="index.html piros-golyo.png" alt="golyo">
         <img src="nsárga-golyo.png" alt="golyo">
         <img src="zold-golyo.png" alt="golyo">
         <img src="kek-golyo.png" alt="golyo">
