--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <h1>Korábbi sorsolások</h1>
         <h1>Előző heti nyerőszámok</h1>
         <img src="index.html piros-golyo.png" alt="golyo">
-        <img src="nsárga-golyo.png" alt="golyo">
-        <img src="zold-golyo.png" alt="golyo">
-        <img src="kek-golyo.png" alt="golyo">
-        <img src="lila-golyo.png" alt="golyo">
+        <img src="index.html.nsárga-golyo.png" alt="golyo">
+        <img src="index.html.zold-golyo.png" alt="golyo">
+        <img src="index html kék.png" alt="golyo">
+        <img src="index.lila-golyo.png" alt="golyo">
         <h1>Korábbi nyerőszámok</h1>
         <img src="piros-golyo.png" alt="golyo">
         <img src="nsárga-golyo.png" alt="golyo">
