index/css helyrehozása

--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div>
-</body>
-<!--Menüszalag vége-->
 
-<!--Tartalom kezdete-->
-<body>
-    <div clss="tartalom">
-    <elemnet class="tartalom">
-        <h1>Korábbi sorsolások</h1>
-        <h1>Előző heti nyerőszámok</h1>
-        <img src="index.html piros-golyo.png" alt="golyo">
-        <img src="index.html.nsárga-golyo.png" alt="golyo">
-        <img src="index.html.zold-golyo.png" alt="golyo">
-        <img src="index html kék.png" alt="golyo">
-        <img src="index.lila-golyo.png" alt="golyo">
-        <h1>Korábbi nyerőszámok</h1>
-        <img src="piros-golyo.png" alt="golyo">
-        <img src="nsárga-golyo.png" alt="golyo">
-        <img src="zold-golyo.png" alt="golyo">
-        <img src="kek-golyo.png" alt="golyo">
-        <img src="lila-golyo.png" alt="golyo">
+                <!--Menüszalag vége-->
+
+                    <!--Tartalom kezdete-->
+
+        <div class="tartalom">
+            
+            <h1>Korábbi sorsolások</h1>
+            <h1>Előző heti nyerőszámok</h1>
+            <img class="golyo"src="index.html piros-golyo.png" alt="golyo">
+            <img class="golyo"src="index.html.nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="index.html.zold-golyo.png" alt="golyo">
+            <img class="golyo"src="index html kék.png" alt="golyo">
+            <img class="golyo"src="index.lila-golyo.png" alt="golyo">
+            <h1>Korábbi nyerőszámok</h1>
+            <img class="golyo"src="piros-golyo.png" alt="golyo">
+            <img class="golyo"src="nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="zold-golyo.png" alt="golyo">
+            <img class="golyo"src="kek-golyo.png" alt="golyo">
+            <img class="golyo"src="lila-golyo.png" alt="golyo">
+
+        </div>  
     </div>
 <!--Tartalom vége-->
 </body>
