Golyók mappából behelyezése

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <h1>Korábbi sorsolások</h1>
             <h1>Előző heti nyerőszámok</h1>
-            <img class="golyo"src="index.html piros-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/index.html piros-golyo.png" alt="golyo">
             <img class="golyo"src="index.html.nsárga-golyo.png" alt="golyo">
             <img class="golyo"src="index.html.zold-golyo.png" alt="golyo">
             <img class="golyo"src="index html kék.png" alt="golyo">
