--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             <h1>Korábbi sorsolások</h1>
             <h1>Előző heti nyerőszámok</h1>
             <img class="golyo"src="./golyo/index.html piros-golyo.png" alt="golyo">
-            <img class="golyo"src="index.html.nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="index.html.zold-golyo.png" alt="golyo">
-            <img class="golyo"src="index html kék.png" alt="golyo">
-            <img class="golyo"src="index.lila-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/index.html.nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/index.html.zold-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/index html kék.png" alt="golyo">
+            <img class="golyo"src="./golyo/index.lila-golyo.png" alt="golyo">
             <h1>Korábbi nyerőszámok</h1>
-            <img class="golyo"src="piros-golyo.png" alt="golyo">
-            <img class="golyo"src="nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="zold-golyo.png" alt="golyo">
-            <img class="golyo"src="kek-golyo.png" alt="golyo">
-            <img class="golyo"src="lila-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/zold-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/kek-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/lila-golyo.png" alt="golyo">
 
         </div>  
     </div>
