Menü kép beillesztése, leghasonlóbb számsorok html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <img src="hatter.jpg" width="300px">
+            <img src="hatter.png ">
             <ul>
                 <li><a href="index.html">Korábbi sorsolások</a></li> <hr>
                 <li><a href="leggyakoribb_szamok.html">Leggyakoribb számok</a></li> <hr>
@@ -25,25 +25,24 @@
             </ul>
         </div>
 
-                <!--Menüszalag vége-->
+<!--Menüszalag vége-->
 
                     <!--Tartalom kezdete-->
 
         <div class="tartalom">
-            
             <h1>Korábbi sorsolások</h1>
             <h1>Előző heti nyerőszámok</h1>
-            <img class="golyo"src="./golyo/index.html piros-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/index.html.nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/index.html.zold-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/index html kék.png" alt="golyo">
-            <img class="golyo"src="./golyo/index.lila-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/piros.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/nsárga.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/zöld.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/kék.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/lila.png" alt="golyo">
             <h1>Korábbi nyerőszámok</h1>
-            <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/zold-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/kek-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/lila-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/piros.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/nsárga.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/zöld.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/kék.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/lila.png" alt="golyo">
 
         </div>  
     </div>
