--- a/leghasonlobb_szamsorok.html
+++ b/leghasonlobb_szamsorok.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <img src="hatter.jpg" width="400px">
+            <img src="hatter.png ">
             <ul>
                 <li><a href="index.html">Korábbi sorsolások</a></li> <hr>
                 <li><a href="leggyakoribb_szamok.html">Leggyakoribb számok</a></li> <hr>
@@ -24,5 +24,27 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div>
+    <!--Menüszalag vége-->
+    
+        <!--Tartalom kezdete-->
+
+        <div class="tartalom">
+            <h1>Leghasonlóbb <br> számsorok</h1>
+            <h1>1689-02-24</h1>
+            <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/zöld-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/kék-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/lila-golyo.png" alt="golyo">
+            <h1>1987-10-08</h1>
+            <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/zöld-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/kék-golyo.png" alt="golyo">
+            <img class="golyo"src="./golyo/lila-golyo.png" alt="golyo">
+
+        </div>  
+    </div>
+<!--Tartalom vége-->
 </body>
-<!--Menüszalag vége-->
+</html>
