--- a/erdekestortenet.html
+++ b/erdekestortenet.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <img src="hatter.jpg" width="400px">
+            <img src="hatter.png" width="400px">
             <ul>
                 <li><a href="index.html">Korábbi sorsolások</a></li> <hr>
                 <li><a href="leggyakoribb_szamok.html">Leggyakoribb számok</a></li> <hr>
