golyó mappa módosítás

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <div class="tartalom">
             <h1>Korábbi sorsolások</h1>
             <h1>Előző heti nyerőszámok</h1>
-            <img class="golyo"src="./golyo/index golyok/piros.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/nsárga.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/zöld.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/kék.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/lila.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/előzőheti/piros.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/előzőheti/nsárga.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/előzőheti/zöld.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/előzőheti/kék.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/előzőheti/lila.png" alt="golyo">
             <h1>Korábbi nyerőszámok</h1>
-            <img class="golyo"src="./golyo/index golyok/piros.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/nsárga.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/zöld.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/kék.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/lila.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/piros.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/nsárga.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/zöld.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/kék.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/lila.png" alt="golyo">
 
         </div>  
     </div>
