leggyakoribb számok html oldal

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <img class="golyo"src="./golyo/index golyok/előzőheti/kék.png" alt="golyo">
             <img class="golyo"src="./golyo/index golyok/előzőheti/lila.png" alt="golyo">
             <h1>Korábbi nyerőszámok</h1>
-            <img class="golyo"src="./golyo/index golyok/múltheti/mpiros.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/piros.png" alt="golyo">
             <img class="golyo"src="./golyo/index golyok/múltheti/nsárga.png" alt="golyo">
-            <img class="golyo"src="./golyo/index golyok/múltheti/zöld.png" alt="golyo">
+            <img class="golyo"src="./golyo/index golyok/múltheti/zöld-golyo.png" alt="golyo">
             <img class="golyo"src="./golyo/index golyok/múltheti/kék.png" alt="golyo">
             <img class="golyo"src="./golyo/index golyok/múltheti/lila.png" alt="golyo">
 
