--- a/leggyakoribb_szamok.html
+++ b/leggyakoribb_szamok.html
@@ -24,5 +24,24 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div>
-</body>
-<!--Menüszalag vége-->
+        <!--Menüszalag vége-->
+        <!--Tartalom kezdete-->
+        <div class="taralom">
+        <h1>Leggyakoribb számok</h1>
+        <h2>#1</h2> <img class="golyo" src=""alt="golyo">
+        </div>
+
+        
+
+
+
+
+
+
+
+
+
+
+
+    </body>
+                   
