leggyakoribb szamok oldal

--- a/leggyakoribb_szamok.html
+++ b/leggyakoribb_szamok.html
@@ -26,9 +26,11 @@
         </div>
         <!--Menüszalag vége-->
         <!--Tartalom kezdete-->
-        <div class="taralom">
+        <div class="szamok">
         <h1>Leggyakoribb számok</h1>
         <h2>#1</h2> <img class="golyo" src=""alt="golyo">
+        <h3>#2</h3> <img class="golyo" src=""alt="golyo">
+        <h4>#3</h4> <img class="golyo" src=""alt="golyo">
         </div>
 
         
