Érdekes történet, css,

--- a/erdekestortenet.html
+++ b/erdekestortenet.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <img src="hatter.png" width="400px">
+            <img src="hatter.png">
             <ul>
                 <li><a href="index.html">Korábbi sorsolások</a></li> <hr>
                 <li><a href="leggyakoribb_szamok.html">Leggyakoribb számok</a></li> <hr>
@@ -24,5 +24,14 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div>
-</body>
 <!--Menüszalag vége-->
+        <div class="tartalom">
+            <h1>Érdekes történetek</h1>
+            <br>
+            <p class="et">1. Történet</p>
+                <p class="tortenet">Egy 18 éves lány az Egyesült Királyságban, Cumbria-ban több mint 7 millió fontot zsebelt be nem sokkal a vizsgái letétele után. Ianthe Fullagar korábban pincérnőként dolgozott, óránként 4,75 fontos bérért, majd 2008 szeptemberében nyert az EuroMillions lottón. Olyan ideges lett, hogy még a saját kutyája is beleharapott a fenekébe izgalmában. Idegességében úgy döntött, hogy a szívéhez legközelebb tartja a nyertes lottószelvényét, és biztonságból a melltartójába rejtette azt.</p>
+            <p class="et">2. Történet</p>
+                <p class="tortenet">2002-ben a paksi kosárlabdacsapat felvállalta, hogy ők nyerték meg a hatoslottó főnyereményét. Ahelyett, hogy a csapat feloszlott volna, ugyanolyan keményen sportoltak tovább. Az előző és ez a példa arra is jó példa, hogy a lottózás nemcsak egyéni, de közösségi és közösséget kovácsoló tevékenység is. Akkor is, ha senki nem nyer, de közösen talán még egyszerűbb egymást „fenntartani” az új élethelyzetben.</p>
+        </div>
+    </div>
+</body>
