--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     <!--Tartalom kezdete-->
 
         <div class="tartalom">
-            <h1>Korábbi sorsolások</h1>
+            <h1 class="cim">Korábbi sorsolások</h1>
+            <br>
             <h1>Előző heti nyerőszámok</h1>
             <img class="golyo"src="./Golyo/indexgolyok/elozoheti/piros.png" alt="golyo">
             <img class="golyo"src="./Golyo/indexgolyok/elozoheti/nsárga.png" alt="golyo">
