--- a/leggyakoribb_szamok.html
+++ b/leggyakoribb_szamok.html
@@ -26,24 +26,11 @@
         </div>
         <!--Menüszalag vége-->
         <!--Tartalom kezdete-->
-        <div class="szamok">
-        <h1>Leggyakoribb számok</h1>
-        <h2>#1</h2> <img class="golyo" src=""alt="golyo">
-        <h3>#2</h3> <img class="golyo" src=""alt="golyo">
-        <h4>#3</h4> <img class="golyo" src=""alt="golyo">
+        <div class="tartalom">
+            <h1>Leggyakoribb számok</h1>
+            <h2 class="leggyh2">#1 <img class="golyo" src="Golyo/leggyakoribb/kék-golyo.png"> 2018 db </h2>
+            <h2 class="leggyh2">#2 <img class="golyo" src="Golyo/leggyakoribb/piros-golyo.png"> 209 db </h2>
+            <h2 class="leggyh2">#3 <img class="golyo" src="Golyo/leggyakoribb/nsárga-golyo.png"> 208 db <h2>
         </div>
-
-        
-
-
-
-
-
-
-
-
-
-
-
-    </body>
-                   
+    </div>
+</body>
