--- a/legkisebb_osszegu_szamsorok.html
+++ b/legkisebb_osszegu_szamsorok.html
@@ -9,7 +9,7 @@
     
 </head>
 
-<!--Menüszalag kezdete-->
+        <!--Menüszalag kezdete-->
 <body>
     <div class="container">
         <div class="menu">
@@ -24,5 +24,9 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div>
+        <!--Menüszalag vége-->
+        <div class="tartalom">
+            <h1>Legkisebb összegű számsorok</h1>
+        </div>
+    </div>
 </body>
-<!--Menüszalag vége-->
