--- a/grafikonok.html
+++ b/grafikonok.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <img src="hatter.png" width="400px">
+            <img src="hatter.png">
             <ul>
                 <li><a href="index.html">Korábbi sorsolások</a></li> <hr>
                 <li><a href="leggyakoribb_szamok.html">Leggyakoribb számok</a></li> <hr>
@@ -24,5 +24,9 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div> 
-<!--Menüszalag vége-->
+        <!--Menüszalag vége-->
+        <div class="tartalom">
+            <h1>Grafikonok</h1>
+        </div>
+    </div>
 </body>
