--- a/leghasonlobb_szamsorok.html
+++ b/leghasonlobb_szamsorok.html
@@ -29,7 +29,7 @@
         <!--Tartalom kezdete-->
 
         <div class="tartalom">
-            <h1>Leghasonlóbb <br> számsorok</h1>
+            <h1>Leghasonlóbb <br> számsorok</h1> <br>
             <h1>1689-02-24</h1>
             <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
             <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
