--- a/leghasonlobb_szamsorok.html
+++ b/leghasonlobb_szamsorok.html
@@ -31,17 +31,17 @@
         <div class="tartalom">
             <h1>Leghasonlóbb <br> számsorok</h1> <br>
             <h1>1689-02-24</h1>
-            <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/zöld-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/kék-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/lila-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/piros-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/zöld-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/kék-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/lila-golyo.png" alt="golyo">
             <h1>1987-10-08</h1>
-            <img class="golyo"src="./golyo/piros-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/zöld-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/kék-golyo.png" alt="golyo">
-            <img class="golyo"src="./golyo/lila-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/piros-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/zöld-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/kék-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo/lila-golyo.png" alt="golyo">
 
         </div>  
     </div>
