Érdekes történet html Alcím helyreigazítása

--- a/erdekestortenet.html
+++ b/erdekestortenet.html
@@ -28,9 +28,9 @@
         <div class="tartalom">
             <h1>Érdekes történetek</h1>
             <br>
-            <p class="et">1. Történet</p>
+            <p class="alcim">1. Történet:</p>
                 <p class="tortenet">Egy 18 éves lány az Egyesült Királyságban, Cumbria-ban több mint 7 millió fontot zsebelt be nem sokkal a vizsgái letétele után. Ianthe Fullagar korábban pincérnőként dolgozott, óránként 4,75 fontos bérért, majd 2008 szeptemberében nyert az EuroMillions lottón. Olyan ideges lett, hogy még a saját kutyája is beleharapott a fenekébe izgalmában. Idegességében úgy döntött, hogy a szívéhez legközelebb tartja a nyertes lottószelvényét, és biztonságból a melltartójába rejtette azt.</p>
-            <p class="et">2. Történet</p>
+            <p class="alcim">2. Történet:</p>
                 <p class="tortenet">2002-ben a paksi kosárlabdacsapat felvállalta, hogy ők nyerték meg a hatoslottó főnyereményét. Ahelyett, hogy a csapat feloszlott volna, ugyanolyan keményen sportoltak tovább. Az előző és ez a példa arra is jó példa, hogy a lottózás nemcsak egyéni, de közösségi és közösséget kovácsoló tevékenység is. Akkor is, ha senki nem nyer, de közösen talán még egyszerűbb egymást „fenntartani” az új élethelyzetben.</p>
         </div>
     </div>
