--- a/leghosszabb_sorozatok_szamsorokban.html
+++ b/leghosszabb_sorozatok_szamsorokban.html
@@ -27,19 +27,19 @@
         <!--Menüszalag vége-->
         <div class="tartalom">
             <h1>A 3 leghosszabb sorozatot <br> tartalmazó számsor</h1>
-            <h1>4 egymást követő szám</h1>
+            <h1 class="alcim1">4 egymást követő szám</h1>
                 <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
-            <h1>3 egymást követő szám</h1>
+            <h1 class="alcim1">3 egymást követő szám</h1>
                 <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
-            <h1>3 egymást követő szám</h1>
+            <h1 class="alcim1">3 egymást követő szám</h1>
                 <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
