legkisebb osszegu szamsorok html , terkoz

--- a/leghosszabb_sorozatok_szamsorokban.html
+++ b/leghosszabb_sorozatok_szamsorokban.html
@@ -33,13 +33,13 @@
                 <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
-            <h1 class="alcim1">3 egymást követő szám</h1>
+            <h1 id="terkoz" class="alcim1">3 egymást követő szám</h1>
                 <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
-            <h1 class="alcim1">3 egymást követő szám</h1>
+            <h1 id="terkoz" class="alcim1">3 egymást követő szám</h1>
                 <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
                 <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
