--- a/legkisebb_osszegu_szamsorok.html
+++ b/legkisebb_osszegu_szamsorok.html
@@ -26,7 +26,25 @@
         </div>
         <!--Menüszalag vége-->
         <div class="tartalom">
-            <h1>Legkisebb összegű számsorok</h1>
+            <h1>A 3 legkisebb összegű <br> számsorok</h1>
+            <h1 class="alcim1">Összeg:</h1>
+                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
+            <h1 id="terkoz" class="alcim1">Összeg:</h1>
+                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
+            <h1 id="terkoz" class="alcim1">Összeg:</h1>
+                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
         </div>
     </div>
 </body>
