--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <li><a href="erdekestortenet.html">Érdekes történetek</a></li> <hr>
             </ul>
         </div>
-
-<!--Menüszalag vége-->
+                    <!--Menüszalag vége-->
 
                     <!--Tartalom kezdete-->
 
@@ -38,7 +37,8 @@
             <img class="golyo"src="./Golyo/indexgolyok/elozoheti/zöld.png" alt="golyo">
             <img class="golyo"src="./Golyo/indexgolyok/elozoheti/kék.png" alt="golyo">
             <img class="golyo"src="./Golyo/indexgolyok/elozoheti/lila.png" alt="golyo">
-            <h1>Korábbi nyerőszámok</h1>
+            <br>
+            <h1 class="terkoz">Korábbi nyerőszámok</h1>
             <img class="golyo"src="./Golyo/indexgolyok/multheti/lila.png" alt="golyo">
             <img class="golyo"src="./Golyo/indexgolyok/multheti/nsárga.png" alt="golyo">
             <img class="golyo"src="./Golyo/indexgolyok/multheti/kék.png" alt="golyo">
