--- a/leghasonlobb_szamsorok.html
+++ b/leghasonlobb_szamsorok.html
@@ -36,7 +36,7 @@
             <img class="golyo"src="Golyo/zöld-golyo.png" alt="golyo">
             <img class="golyo"src="Golyo/kék-golyo.png" alt="golyo">
             <img class="golyo"src="Golyo/lila-golyo.png" alt="golyo">
-            <h1 class="alcim2">1987-10-08</h1>
+            <h1 id="terkoz" class="alcim2">1987-10-08</h1>
             <img class="golyo"src="Golyo/piros-golyo.png" alt="golyo">
             <img class="golyo"src="Golyo/nsárga-golyo.png" alt="golyo">
             <img class="golyo"src="Golyo/zöld-golyo.png" alt="golyo">
