golyó számok behelyezése a weboldalra

--- a/leghasonlobb_szamsorok.html
+++ b/leghasonlobb_szamsorok.html
@@ -30,18 +30,18 @@
 
         <div class="tartalom">
             <h1>Leghasonlóbb <br> számsorok</h1> <br>
-            <h1 class="alcim2">1689-02-24</h1>
-            <img class="golyo"src="Golyo/piros-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/zöld-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/kék-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/lila-golyo.png" alt="golyo">
-            <h1 id="terkoz" class="alcim2">1987-10-08</h1>
-            <img class="golyo"src="Golyo/piros-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/nsárga-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/zöld-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/kék-golyo.png" alt="golyo">
-            <img class="golyo"src="Golyo/lila-golyo.png" alt="golyo">
+            <h1 class="alcim2">2018-07-24</h1>
+            <img class="golyo"src="Golyo\indexgolyok\2018-07\2018-07piros-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-07\2018-07nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-07\2018-07zöld-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-07\2018-07kék-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-07\2018-07lila-golyo.png" alt="golyo">
+            <h1 id="terkoz" class="alcim2">2018-11-02</h1>
+            <img class="golyo"src="Golyo\indexgolyok\2018-11\2018piros-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-11\2018nsárga-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-11\2018zöld-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-11\2018kék-golyo.png" alt="golyo">
+            <img class="golyo"src="Golyo\indexgolyok\2018-11\2018lila-golyo.png" alt="golyo">
 
         </div>  
     </div>
