--- a/leghosszabb_sorozatok_szamsorokban.html
+++ b/leghosszabb_sorozatok_szamsorokban.html
@@ -28,23 +28,23 @@
         <div class="tartalom">
             <h1>A 3 leghosszabb sorozatot <br> tartalmazó számsor</h1>
             <h1 class="alcim1">4 egymást követő szám</h1>
-                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\1\3 leg hb szam1piros-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\1\3 leg hb szam 1 nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\1\3 leg hb szam 1zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\1\3 leg hb szam 1kék-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\1\3 leg hb szam 1lila-golyo.png" alt="golyo">
             <h1 id="terkoz" class="alcim1">3 egymást követő szám</h1>
-                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\2\3 leg hb 2piros-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\2\3 leg hb2 nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\2\3 leg hb 2zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\2\3 leg hb2kék-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\2\3 leg hb 2lila-golyo.png" alt="golyo">
             <h1 id="terkoz" class="alcim1">3 egymást követő szám</h1>
-                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\3\3 leg hb 3piros-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\3\3 leg hb 3nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\3\3 leg hb 3zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\3\3 leg hb 3kék-golyo.png" alt="golyo">
+                <img class="golyo" src="Golyo\indexgolyok\3 leghosszabb számsorozat\3\3 leg hb 3lila-golyo.png" alt="golyo">
         </div>
     </div>
 </body>
